# monte-carlo-pricer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  bindings.cpp  main.cpp  mc_pricer.cpp  mc_pricer.h  mc_test  payoff.h  payoffs.h  render.yaml  requirements.txt
python/: black_scholes.py  convergence.py  convergence_analysis.py  live_trade_eval.py  market_data.py  options_analyzer.py  risk_metrics.py  validate.py  validate_delta.py  visualizer.py
web/: app.py
web/templates/: index.html
